# rusty-notes

./: main.py
rustynotes/: Cargo.toml
rustynotes/src/: main.py
